tests/fixtures/invalid/max_float_str.py
# Cannot call max() with Float, Str
x = max(1.0, "hello")
